--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {}
 #hero-mother {
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url("image/heroBackground.jpg");
+    background-image: url("https://github.com/Luki26-png/TourWeb-repo/blob/main/heroBackground.jpg?raw=true");
 }
 
 #hero-container {
