--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ body {}
     border: 1.8px solid #017e85;
     padding: 0.5em 0.6em;
     border-radius: 6px;
+    color: black;
     text-decoration: none;
     font-weight: bold;
 }
